# IR0

./: .clang-format  .config  .config.default  .editorconfig  .gitignore  ANALISIS_COMPLETO_KERNEL.txt  ARM_PORTABILITY_GUIDE.md  BUGFIX_CAT_ZERO_BYTES_FINAL.md  CHANGELOG.md  CONFIGURATION_SYSTEM_README.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  INCLUDE_SYSTEM_GUIDE.md  IR0_KERNEL_ANALISIS.txt  KERNEL_OVERVIEW.txt  Makefile  Makefile.test  Makefile.win  README.MD  README.md  SETUP.md  TEST_PROCEDURE.md  clean_all.make  config.h  fix.sh  grub.cfg  linker.ld  menu.sh  menuconfig  test.sh  test_keyboard.c  test_struct  test_struct.c
Documentation/: ARCH_DEBT_SEP.md  BACKLOG_REMAINING.md  BLUETOOTH.md  CHANGELOG.md  DECOUPLING.md  DEPRECATION_PLAN.md  DOOM_ROADMAP.md  DRIVERS.md  FILESYSTEM.md  HARDENING.md  HOSTSHARE_PRODUCT.md  INTERRUPTS.md  KTM.md  KTM_FASE_INVENTORY.md  KTM_FASE_PARITY.md  MAKEFILE.md  MEMORY.md  POLYMORPHIC_FILESYSTEM_GUIDE.md  PROCESSES.md  PSEUDO_FS_HEART.md  README.md  ROADMAP.md  SCHEDULING.md  STABLE.md  TOOLING.md  TREE_REORGANIZATION_PLAN.md  UNIX_DIFFERENCES.md  USERSPACE_POLYMORPHIC.md  VIRTUAL_FILESYSTEMS.md  devfs-io-contract.md  fase57-reintegration-plan.md  fase58e-ash-interactive-console.md
arch/: README  README.md
cpp/: README.md
debug_bins/: cmd_basename.c  cmd_blue.c  cmd_bluestart.c  cmd_bt_stub.c  cmd_cat.c  cmd_cd.c  cmd_chmod.c  cmd_chown.c  cmd_cmp.c  cmd_cp.c  cmd_cut.c  cmd_date.c  (+52 more)
rust/: Cargo.toml  x86_64-ir0-kernel.json
rust/drivers/: rust_example_driver.rs  rust_simple_driver.rs
rust/ffi/: README.md  kernel.rs
(+1316 files in other folders)
