[package]
name = "ir0-rust-ffi"
version = "1.0.0"
authors = ["IR0 Kernel Team"]
edition = "2021"
description = "Rust FFI bindings for IR0 kernel"

[lib]
name = "ir0_ffi"
path = "ffi/kernel.rs"
crate-type = ["staticlib", "rlib"]

[profile.dev]
panic = "abort"
opt-level = 2

[profile.release]
panic = "abort"
opt-level = 2
lto = true
codegen-units = 1

[dependencies]
# No dependencies - bare metal kernel environment
